[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The Async runtime to use
tokio = { version = "1.12", default_features = false, features = ["rt", "rt-multi-thread", "net", "sync", "io-util"] }

# Tracing
tracing = { version = "0.1" }
tracing-futures = { version = "0.2" }
tracing-subscriber = { version = "0.2", features = ["json"] }
